added some comments

--- a/main.css
+++ b/main.css
@@ -42,6 +42,7 @@ body {
   display: flex;
   background: url("img/Tic-tac-toe.png");
   background-size: cover;
+  /* background-size: 100%; */
   justify-content: center;
   align-content: center;
   flex-wrap: wrap;
@@ -90,16 +91,21 @@ p {
 .score {
   display: none;
   position: absolute;
-  left: 90px;
-  top: 500px;
+  /* left: 90px; */
+  top: 510px;
+  margin: auto;
   /* z-index: -40; */
   height: 150px;
-  width: 456px;
+  width: 95%;
   /* border: 2px solid red; */
 }
 
 .score p {
-  text-align: left;
+  /* border: 1px solid green; */
+  /* margin-left: -200px; */
+
+  width: 50%;
+  text-align: right;
   color: white;
 }
 .score h3 {
