--- a/main.css
+++ b/main.css
@@ -56,6 +56,11 @@ body {
   align-content: center;
   flex-direction: column;
 }
+form {
+  margin-top: 35px;
+  text-align: center;
+  /* border: 1px solid black; */
+}
 .field {
   align-self: center;
   width: 200px;
