--- a/main.css
+++ b/main.css
@@ -132,6 +132,7 @@ p {
 #computerLevel {
   display: flex;
   justify-content: space-evenly;
+  flex-direction: column;
 }
 #computerLevel div {
   font-size: 20px;
