--- a/main.css
+++ b/main.css
@@ -138,3 +138,16 @@ p {
   font-size: 20px;
   color: white;
 }
+
+.xWin {
+  background: url("img/backX.png") no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-size: 78%;
+}
+.oWin {
+  background: url("img/backO.png") no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-size: 78%;
+}
