--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ body {
   background-size: cover;
   background-position: center;
   background-size: 78%;
+  transition: all 0.5s cubic-bezier(0, 2.29, 0.57, 0.52);
 }
 
 .o {
@@ -30,6 +31,7 @@ body {
   background-size: cover;
   background-position: center;
   background-size: 78%;
+  transition: all 0.5s cubic-bezier(0.76, -0.97, 0.07, 1.47);
 }
 
 .layer {
@@ -131,12 +133,14 @@ p {
 }
 #computerLevel {
   display: flex;
-  justify-content: space-evenly;
+  margin-top: -10px;
+  /* justify-content: space-evenly; */
   flex-direction: column;
 }
 #computerLevel div {
   font-size: 20px;
   color: white;
+  /* border: 1px solid red; */
 }
 
 .xWin {
